// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostComposer Snapshots matches snapshot for AI persona render 1`] = `
<div
  class="border-b border-x-border bg-white dark:bg-x-dark"
>
  <div
    class="p-4"
  >
    <div
      class="flex space-x-3"
    >
      <div
        class="flex-shrink-0"
      >
        <img
          alt="AI Conservative Voice"
          class="w-12 h-12 rounded-full"
          src="https://example.com/ai-avatar.jpg"
        />
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="relative"
        >
          <textarea
            class="w-full resize-none border-none bg-transparent text-xl placeholder-x-text-secondary focus:outline-none focus:ring-0 dark:text-x-text-dark dark:placeholder-x-text-secondary-dark"
            maxlength="560"
            placeholder="What's happening?"
            rows="3"
          />
        </div>
        <div
          class="flex items-center justify-between mt-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <button
              aria-label="Add images"
              class="p-2 text-x-blue hover:bg-x-blue-light/20 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
            >
              <svg
                class="lucide lucide-image w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  ry="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <circle
                  cx="9"
                  cy="9"
                  r="2"
                />
                <path
                  d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
                />
              </svg>
            </button>
            <button
              aria-label="Add emoji"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-smile w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M8 14s1.5 2 4 2 4-2 4-2"
                />
                <line
                  x1="9"
                  x2="9.01"
                  y1="9"
                  y2="9"
                />
                <line
                  x1="15"
                  x2="15.01"
                  y1="9"
                  y2="9"
                />
              </svg>
            </button>
            <button
              aria-label="Add location"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-map-pin w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-label="Schedule post"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-calendar w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="inline-flex items-center justify-center transition-colors focus-ring disabled:opacity-50 disabled:pointer-events-none text-white h-10 rounded-full px-6 font-semibold bg-political-conservative-500 hover:bg-political-conservative-600"
                disabled=""
              >
                Post
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <input
    accept="image/*"
    class="hidden"
    multiple=""
    type="file"
  />
</div>
`;

exports[`PostComposer Snapshots matches snapshot for basic render 1`] = `
<div
  class="border-b border-x-border bg-white dark:bg-x-dark"
>
  <div
    class="p-4"
  >
    <div
      class="flex space-x-3"
    >
      <div
        class="flex-shrink-0"
      >
        <img
          alt="Test User"
          class="w-12 h-12 rounded-full"
          src="https://example.com/avatar.jpg"
        />
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="relative"
        >
          <textarea
            class="w-full resize-none border-none bg-transparent text-xl placeholder-x-text-secondary focus:outline-none focus:ring-0 dark:text-x-text-dark dark:placeholder-x-text-secondary-dark"
            maxlength="560"
            placeholder="What's happening?"
            rows="3"
          />
        </div>
        <div
          class="flex items-center justify-between mt-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <button
              aria-label="Add images"
              class="p-2 text-x-blue hover:bg-x-blue-light/20 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
            >
              <svg
                class="lucide lucide-image w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  ry="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <circle
                  cx="9"
                  cy="9"
                  r="2"
                />
                <path
                  d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
                />
              </svg>
            </button>
            <button
              aria-label="Add emoji"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-smile w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M8 14s1.5 2 4 2 4-2 4-2"
                />
                <line
                  x1="9"
                  x2="9.01"
                  y1="9"
                  y2="9"
                />
                <line
                  x1="15"
                  x2="15.01"
                  y1="9"
                  y2="9"
                />
              </svg>
            </button>
            <button
              aria-label="Add location"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-map-pin w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-label="Schedule post"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-calendar w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="inline-flex items-center justify-center transition-colors focus-ring disabled:opacity-50 disabled:pointer-events-none bg-x-blue hover:bg-blue-600 text-white h-10 rounded-full px-6 font-semibold"
                disabled=""
              >
                Post
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <input
    accept="image/*"
    class="hidden"
    multiple=""
    type="file"
  />
</div>
`;

exports[`PostComposer Snapshots matches snapshot for reply composer 1`] = `
<div
  class="border-b border-x-border bg-white dark:bg-x-dark"
>
  <div
    class="p-4"
  >
    <div
      class="flex space-x-3"
    >
      <div
        class="flex-shrink-0"
      >
        <img
          alt="Test User"
          class="w-12 h-12 rounded-full"
          src="https://example.com/avatar.jpg"
        />
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="relative"
        >
          <textarea
            class="w-full resize-none border-none bg-transparent text-xl placeholder-x-text-secondary focus:outline-none focus:ring-0 dark:text-x-text-dark dark:placeholder-x-text-secondary-dark"
            maxlength="560"
            placeholder="What's happening?"
            rows="3"
          />
        </div>
        <div
          class="flex items-center justify-between mt-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <button
              aria-label="Add images"
              class="p-2 text-x-blue hover:bg-x-blue-light/20 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
            >
              <svg
                class="lucide lucide-image w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  ry="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <circle
                  cx="9"
                  cy="9"
                  r="2"
                />
                <path
                  d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
                />
              </svg>
            </button>
            <button
              aria-label="Add emoji"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-smile w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M8 14s1.5 2 4 2 4-2 4-2"
                />
                <line
                  x1="9"
                  x2="9.01"
                  y1="9"
                  y2="9"
                />
                <line
                  x1="15"
                  x2="15.01"
                  y1="9"
                  y2="9"
                />
              </svg>
            </button>
            <button
              aria-label="Add location"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-map-pin w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-label="Schedule post"
              class="p-2 text-x-light-gray hover:bg-gray-100 dark:hover:bg-gray-800 rounded-full transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
              disabled=""
            >
              <svg
                class="lucide lucide-calendar w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-ring disabled:opacity-50 disabled:pointer-events-none hover:bg-gray-100 dark:hover:bg-gray-800 h-8 px-3 text-sm"
              >
                Cancel
              </button>
              <button
                class="inline-flex items-center justify-center transition-colors focus-ring disabled:opacity-50 disabled:pointer-events-none bg-x-blue hover:bg-blue-600 text-white h-10 rounded-full px-6 font-semibold"
                disabled=""
              >
                Reply
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <input
    accept="image/*"
    class="hidden"
    multiple=""
    type="file"
  />
</div>
`;
